# OOP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
kolok1/: k1.cpp  k2.cpp  k3.cpp  zad1.cpp  zad10.cpp  zad11.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
kolok2/: zad1.cpp  zad2.cpp  zad4.cpp  zad5.cpp
kval_kolok/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
kvalifikaciski/: zad1.cpp  zad10.cpp  zad11.cpp  zad12.cpp  zad13.cpp  zad14.cpp  zad15.cpp  zad16.cpp  zad17.cpp  zad18.cpp  zad19.cpp  zad2.cpp  zad20.cpp  zad21.cpp  zad22.cpp  zad23.cpp  zad24.cpp  zad25.cpp  zad26.cpp  zad27.cpp  zad28.cpp  zad3.cpp  zad30.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
lab1/: zad1.cpp  zad2.cpp  zad3.cpp
lab2/: zad1.cpp  zad2.cpp
lab3/: zad1.cpp  zad10.cpp  zad11.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
lab4/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
lab5/: zad1.cpp  zad2.cpp  zad3.cpp
lab6/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
lab7/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
lab8/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
lab9/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
vezhbiLabs/: zad1.cpp  zad12.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
