cmake_minimum_required(VERSION 3.27)
project(OOP)

set(CMAKE_CXX_STANDARD 17)

add_executable(OOP main.cpp)


add_executable(vezhbi1.1 vezhbiLabs/zad1.cpp)
add_executable(vezhbi1.2 vezhbiLabs/zad2.cpp)
add_executable(vezhbi1.3 vezhbiLabs/zad3.cpp)
add_executable(vezhbi1.4 vezhbiLabs/zad4.cpp)
add_executable(vezhbi1.5 vezhbiLabs/zad5.cpp)


add_executable(lab1.1 lab1/zad1.cpp)
add_executable(lab1.2 lab1/zad2.cpp)
add_executable(lab1.3 lab1/zad3.cpp)


add_executable(lab2.1 lab2/zad1.cpp)
add_executable(lab2.2 lab2/zad2.cpp)


add_executable(lab3.1 lab3/zad1.cpp)
add_executable(lab3.2 lab3/zad2.cpp)
add_executable(lab3.3 lab3/zad3.cpp)


add_executable(kolok1 kval_kolok/zad1.cpp)
add_executable(kolok2 kval_kolok/zad2.cpp)
add_executable(kolok3 kval_kolok/zad3.cpp)
add_executable(kolok4 kval_kolok/zad4.cpp)
add_executable(kolok5 kval_kolok/zad5.cpp)
add_executable(kolok6 kval_kolok/zad6.cpp)


add_executable(k1 kolok1/zad1.cpp)
add_executable(k2 kolok1/zad2.cpp)
add_executable(k3 kolok1/zad3.cpp)
add_executable(k4 kolok1/zad4.cpp)
add_executable(k5 kolok1/zad5.cpp)
add_executable(k6 kolok1/zad6.cpp)
add_executable(k7 kolok1/zad7.cpp)
add_executable(k8 kolok1/zad8.cpp)
add_executable(k10 kolok1/zad10.cpp)

