cmake_minimum_required(VERSION 3.27)
project(OOP)

set(CMAKE_CXX_STANDARD 17)



add_executable(m main.cpp)
add_executable(vezhbi1.1 vezhbiLabs/zad1.cpp)
add_executable(vezhbi1.2 vezhbiLabs/zad2.cpp)
add_executable(vezhbi1.3 vezhbiLabs/zad3.cpp)
add_executable(vezhbi1.4 vezhbiLabs/zad4.cpp)
add_executable(vezhbi1.5 vezhbiLabs/zad5.cpp)



add_executable(lab1.1 lab1/zad1.cpp)
add_executable(lab1.2 lab1/zad2.cpp)
add_executable(lab1.3 lab1/zad3.cpp)


add_executable(lab2.1 lab2/zad1.cpp)
add_executable(lab2.2 lab2/zad2.cpp)


add_executable(lab3.1 lab3/zad1.cpp)
add_executable(lab3.2 lab3/zad2.cpp)
add_executable(lab3.3 lab3/zad3.cpp)
add_executable(lab3.4 lab3/zad4.cpp)
add_executable(lab3.5 lab3/zad5.cpp)
add_executable(lab3.6 lab3/zad6.cpp)
add_executable(lab3.7 lab3/zad7.cpp)
add_executable(lab3.8 lab3/zad8.cpp)
add_executable(lab3.9 lab3/zad9.cpp)
add_executable(lab3.10 lab3/zad10.cpp)
add_executable(lab3.11 lab3/zad11.cpp)

add_executable(lab4.1 lab4/zad1.cpp)
add_executable(lab4.2 lab4/zad2.cpp)
add_executable(lab4.3 lab4/zad3.cpp)
add_executable(lab4.4 lab4/zad4.cpp)
add_executable(lab4.5 lab4/zad5.cpp)

add_executable( lab5.1 lab5/zad1.cpp)
add_executable( lab5.2 lab5/zad2.cpp)
add_executable( lab5.3 lab5/zad3.cpp)

add_executable(lab6.1 lab6/zad1.cpp)
add_executable(lab6.2 lab6/zad2.cpp)
add_executable(lab6.3 lab6/zad3.cpp)
add_executable(lab6.4 lab6/zad4.cpp)
add_executable(lab6.5 lab6/zad5.cpp)
add_executable(lab6.6 lab6/zad6.cpp)
add_executable(lab6.7 lab6/zad7.cpp)
add_executable(lab6.8 lab6/zad8.cpp)
add_executable(lab6.9 lab6/zad9.cpp)

add_executable(lab7.1 lab7/zad1.cpp)
add_executable(lab7.2 lab7/zad2.cpp)
add_executable(lab7.3 lab7/zad3.cpp)
add_executable(lab7.4 lab7/zad4.cpp)



add_executable(q1 kvalifikaciski/zad1.cpp)
add_executable(q2 kvalifikaciski/zad2.cpp)
add_executable(q3 kvalifikaciski/zad3.cpp)
add_executable(q4 kvalifikaciski/zad4.cpp)
add_executable(q5 kvalifikaciski/zad5.cpp)
add_executable(q6 kvalifikaciski/zad6.cpp)
add_executable(q7 kvalifikaciski/zad7.cpp)
add_executable(q8 kvalifikaciski/zad8.cpp)
add_executable(q9 kvalifikaciski/zad9.cpp)
add_executable(q10 kvalifikaciski/zad10.cpp)
add_executable(q11 kvalifikaciski/zad11.cpp)
add_executable(q12 kvalifikaciski/zad12.cpp)
add_executable(q13 kvalifikaciski/zad13.cpp)
add_executable(q14 kvalifikaciski/zad14.cpp)
add_executable(q15 kvalifikaciski/zad15.cpp)
add_executable(q16 kvalifikaciski/zad16.cpp)
add_executable(q17 kvalifikaciski/zad17.cpp)
add_executable(q18 kvalifikaciski/zad18.cpp)
add_executable(q19 kvalifikaciski/zad19.cpp)
add_executable(q20 kvalifikaciski/zad20.cpp)
add_executable(q21 kvalifikaciski/zad21.cpp)
add_executable(q22 kvalifikaciski/zad22.cpp)
add_executable(q23 kvalifikaciski/zad23.cpp)
add_executable(q24 kvalifikaciski/zad24.cpp)
add_executable(q25 kvalifikaciski/zad25.cpp)
add_executable(q26 kvalifikaciski/zad26.cpp)
add_executable(q27 kvalifikaciski/zad27.cpp)
add_executable(q28 kvalifikaciski/zad28.cpp)
add_executable(q29 kvalifikaciski/zad29.cpp)
add_executable(q30 kvalifikaciski/zad30.cpp)

add_executable(k1 kolok1/zad1.cpp)
add_executable(k2 kolok1/zad2.cpp)
add_executable(k3 kolok1/zad3.cpp)
add_executable(k4 kolok1/zad4.cpp)
add_executable(k5 kolok1/zad5.cpp)
add_executable(k6 kolok1/zad6.cpp)
add_executable(k7 kolok1/zad7.cpp)
add_executable(k8 kolok1/zad8.cpp)
add_executable(k10 kolok1/zad10.cpp)
add_executable(k11 kolok1/zad11.cpp)

add_executable(kk1 kolok1/k1.cpp)
add_executable(kk2 kolok1/k2.cpp)
add_executable(kk3 kolok1/k3.cpp)


